// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markup allows empty \`content\` to be passed 1`] = `""`;

exports[`Markup converts line breaks 1`] = `
"Foo
<br />
Bar"
`;

exports[`Markup doesnt convert line breaks 1`] = `
"Foo
Bar"
`;

exports[`Markup doesnt convert line breaks if it contains HTML 1`] = `
"Foo

<br />
Bar"
`;

exports[`Markup parses the entire document starting from the body 1`] = `
"<main role=\\"main\\">
  
  Main content
  
  <div>
    
    
    <a href=\\"#\\">
      Link
    </a>
    
    
    <span className=\\"foo\\">
      String
    </span>
    
  
  </div>
  

</main>


<aside id=\\"sidebar\\">
  
  Sidebar content

</aside>"
`;

exports[`Markup will render the \`emptyContent\` if no content exists 1`] = `"<div>Foo</div>"`;
